--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -14,7 +14,7 @@
 // regular style toast
 @import '~ngx-toastr/toastr';
 //// ngx-share buttons styles
-//@import '~@ngx-share/button/themes/material/material-light-theme';
+@import '~@ngx-share/button/themes/material/material-light-theme';
 
 /* You can add global styles to this file, and also import other style files */
 @import "fonts";
