--- a/src/app/shared/components/not-found/not-found.component.scss
+++ b/src/app/shared/components/not-found/not-found.component.scss
@@ -1,4 +1,11 @@
-.notFoundMsg{
-  color: silver;
-  font-weight: unset;
+.notFound {
+  position: absolute;
+  top: 183px;
+  text-align: center;
+  width: 100%;
+
+  .notFoundMsg {
+    color: silver;
+    font-weight: unset;
+  }
 }
