--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -194,7 +194,7 @@
             </mat-sidenav-container>
         </div>
     </div>
-    <a id="button" [hidden]="!showScrollToTopBtn" (click)="scrollToTop()">
+    <a scrollTo href="#header_top" id="button" [hidden]="!showScrollToTopBtn">
         <i class="fas fa-chevron-up"></i>
     </a>
     <div class="feedback_btn">
