--- a/src/app/shared/components/not-found/not-found.component.html
+++ b/src/app/shared/components/not-found/not-found.component.html
@@ -1,1 +1,3 @@
-<h1 class="notFoundMsg">The page is not found</h1>
+<div class="notFound">
+    <h1 class="notFoundMsg">The page is not found</h1>
+</div>
