--- a/src/app/posts/single/single.component.html
+++ b/src/app/posts/single/single.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <div class="main row">
-        <section class="col-md-8" style="padding-right: 37px">
+        <section class="postInfo" style="padding-right: 37px">
             <div class="single_blog_post">
                 <div class="post_title_and_desc" *ngIf="singlePost">
                     <h3>{{singlePost.extractedTitle}}</h3>
@@ -8,11 +8,8 @@
                     <small class="desc">{{singlePost.description|stripTags}}</small>
                     <div class="post_image">
                         <a [href]="singlePost.link">
-                            <img src="{{singlePost.extractedImage}}" alt="" class="postImage">
+                            <img [src]="singlePost.extractedImage" alt="" class="postImage">
                         </a>
-                        <!--                        <div class="play">-->
-                        <!--                            <i class="far fa-play-circle"></i>-->
-                        <!--                        </div>-->
                     </div>
                     <p>{{singlePost.extractedDescription}}</p>
                 </div>
@@ -156,7 +153,7 @@
                 </div>
             </div>
         </section>
-        <div class="col-md-4 rules">
+        <div class="rules">
 
             <ng-container *ngIf="postCategory!=='StyleAndSweat'">
 
