--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* Theme css */
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import '~@ngx-share/button/themes/default/default-theme';
 /* Project-specific styles */
 @import "assets/styles/style";
 
