Added filters in a separate component

--- a/src/app/posts/list/list.component.html
+++ b/src/app/posts/list/list.component.html
@@ -31,7 +31,10 @@
                             </div>
 
 
+                            <app-filters [section]="selectedSection" (filter)="getFilteredPosts($event)"></app-filters>
                         </div>
+
+
                         <div class="all" id="allPosts">
 
                             <!-- Selected vote category -->
