--- a/src/app/posts/list/list.component.html
+++ b/src/app/posts/list/list.component.html
@@ -15,9 +15,9 @@
                     </div>
                 </div>
             </div>
-            <div class="news-block carusel-block">
+            <div id='newsBlock' class="news-block carusel-block">
 
-                <div class="item">
+                <div class="item" (click)="a()">
                     <div class="content_block">
                         <div class="blocks_filter">
                             <div class="text-block">
