--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <button class="login"
-                                mat-raised-button (click)="authenticate(userLoginInf)" color="primary">Login
+                                mat-raised-button (click)="authenticate()" color="primary">Login
                         </button>
                         <button (click)="openForgotPass()" class="forgot_pass" mat-icon-button mat-dialog-close>Forgot
                             Password?
