--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -6,5 +6,6 @@
         </button>
     </div>
     <a mat-list-item [routerLink]="'admin/dashboard'"> Dashboard </a>
+    <a mat-list-item [routerLink]="'admin/complaints'"> Complaints </a>
 
 </mat-nav-list>
