Added manage-posts functionality

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -54,7 +54,7 @@
                                             <a (click)="router.navigate(['/profile'])">My Profile</a>
                                         </li>
                                         <li>
-                                            <a (click)="router.navigate(['/managePost'])">Manage Posts</a>
+                                            <a (click)="router.navigate(['posts/manage'])">Manage Posts</a>
                                         </li>
                                         <li>
                                             <a (click)="router.navigate(['/admin/dashboard'])">Admin</a>
@@ -128,7 +128,7 @@
                                                     <a (click)="router.navigate(['/admin/dashboard'])">Admin</a>
                                                 </li>
                                                 <li>
-                                                    <a (click)="router.navigate(['/managePost'])">Manage Posts</a>
+                                                    <a (click)="router.navigate(['/manage'])">Manage Posts</a>
                                                 </li>
                                                 <li>
                                                     <a (click)="router.navigate(['/about'])">About</a>
