--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -5472,3 +5472,8 @@ button[type=submit].inlineBlock {
   }
 }
 
+.managePostsCats {
+  .mat-select-trigger {
+    margin-top: 0 !important;
+  }
+}
